# lumina-engine

./: .gitattributes  README.md
LuminaEngine/: BloomFBO.cpp  BloomFBO.h  BloomRenderer.cpp  BloomRenderer.h  CMakeLists.txt  LightPreview.cpp  LightPreview.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  TextureUtils.cpp  TextureUtils.h  main.cpp  vcpkg.json
LuminaEngine/Assets/Models/: backpack.mtl
LuminaEngine/Assets/Models/OldTorch/: Attribution.txt  old_torch.mtl
LuminaEngine/Assets/Shaders/: shader_brdf.frag  shader_downsample.frag  shader_eqrect_to_cubemap.frag  shader_irradiance.frag  shader_irradiance.vert  shader_object.frag  shader_object.vert  shader_prefilter.frag  shader_screen.frag  shader_skybox.frag  shader_skybox.vert  shader_upsample.frag
LuminaEngine/Assets/Textures/Skybox/: adams_place_bridge_4k.hdr  pretville_cinema_4k.hdr
